# mephiio-bot

./: Procfile  README.md  bot.py  info.py  main.py  mephi.py  pyproject.toml  requirements.txt  test.db  test.py  test.sqbpro
Alpha/: data_set.py  main.py  students.db  students.sqbpro
data/: id.txt  zvvs1.txt  zvvs1new.txt  zvvs2.txt
dic/: corect.txt  part.txt  party.txt  schedule.txt
stic/: anitan.tgs  hand.tgs  welcome.tgs
